More OSX symbols.

--- a/v1.0/OSX/index.yaml
+++ b/v1.0/OSX/index.yaml
@@ -12,3 +12,11 @@ symbols:
     # The data we expect to find at that offset.
     data: ["string:Darwin Kernel Version "]
 
+  -
+    name: "_osbuilder"
+    data: ["string:root\x00"]
+
+  -
+    name: "_b_to_q"
+    data: ["554889e5415741564154534889d34189"]
+
