--- a/v1.0/nt/eprocess_index.yaml
+++ b/v1.0/nt/eprocess_index.yaml
@@ -2,3 +2,11 @@
 
 repository_root: ./
 path: nt
+type: struct
+implementation: EProcessIndex
+members:
+  _EPROCESS:
+    - ImageFileName
+    - Pcb
+  _KPROCESS:
+    - DirectoryTableBase
