fixed a bug with dnsrslvr index.

--- a/v1.0/dnsrslvr/index.yaml
+++ b/v1.0/dnsrslvr/index.yaml
@@ -1,10 +1,14 @@
 path: dnsrslvr
 symbols:
+  # This index is not used in the traditional way - i.e. we do not check for a
+  # constant string at the specified offset. Rather we check and verify for the
+  # hash table and the heap directly. For this reason we typically do not care
+  # if the profiles are ambiguous.
   -
     name: g_CacheHeap
     data:
-      - "g_CacheHeap"
+      - "00"
   -
     name: g_HashTable
     data:
-      - "g_HashTable"
+      - "00"
