--- a/v1.0/nt/index.yaml
+++ b/v1.0/nt/index.yaml
@@ -46,6 +46,16 @@ symbols:
     data:
       - lstr:APP_NAME
 
+  -
+    name: CmpVendorID
+    data:
+      - lstr:VendorId
+
+  -
+    name: CmpMHz
+    data:
+      - "lstr:~MHz"
+
   - # Functions are always preceeded with NOP instructions.
     name: "wcschr"
     data: ["90"]
@@ -93,5 +103,20 @@ symbols:
 
   -
     name: StringCchCopyNW
+    data: ["90"]
+    shift: -1
+
+  -
+    name: SmFeEmptyComplete
+    data: ["90"]
+    shift: -1
+
+  -
+    name: AlpcRegisterLogRoutine
+    data: ["90"]
+    shift: -1
+
+  -
+    name: CmRenameKey
     data: ["90"]
     shift: -1
