First revision of new the new dynamic profiles repository.

--- a/v1.0/config.yaml
+++ b/v1.0/config.yaml
@@ -5,6 +5,14 @@ nt/GUID:
   guids: src/nt/guids.yaml
   has_structs: true
   index: src/nt/index.yaml
+  profile_class: Nt
+  transforms:
+    merge:
+      - nt/undocumented
+
+nt/undocumented:
+  type: CopyAndTransform
+  source: src/nt/undocumented.yaml
 
 conhost/GUID:
   type: WindowsGUIDProfile
