Modified a date in the inventory to test GRR-Rekall integration. Added a new GUID to the repository. Removed all index.yamls that were in the wrong place and added them to src/. Modified config.yaml to use the new format.

--- a/v1.0/config.yaml
+++ b/v1.0/config.yaml
@@ -4,7 +4,11 @@ nt/GUID:
   type: WindowsGUIDProfile
   guids: src/nt/guids.yaml
   has_structs: true
-  index: src/nt/index.yaml
+  index:
+    - src: src/nt/index.yaml
+      dest: nt/index
+    - src: src/nt/eprocess_index.yaml
+      dest: nt/eprocess_index
   profile_class: Nt
   possible_guid_filenames:
     - ntkrnlmp.pdb
@@ -61,7 +65,9 @@ OSX/dynamic:
 
 OSX:
   type: OSXProfile
-  index: src/OSX/index.yaml
+  index:
+    src: src/OSX/index.yaml
+    dst: OSX/index
   transforms:
     merge:
       - OSX/dynamic
@@ -105,4 +111,6 @@ OSX:
 
 Linux:
   type: LinuxProfile
-  index: src/Linux/index.yaml
+  index:
+    src: src/Linux/index.yaml
+    dest: Linux/index
