Added indexes to LSASrv.dll

--- a/v1.0/config.yaml
+++ b/v1.0/config.yaml
@@ -37,6 +37,9 @@ lsasrv/GUID:
   type: WindowsGUIDProfile
   guids: src/lsasrv/guids.yaml
   has_structs: false
+  index:
+    - src: src/lsasrv/index.yaml
+      dest: lsasrv/index
 
 ntdll/GUID:
   type: WindowsGUIDProfile
