--- a/v1.0/src/nt/eprocess_index.yaml
+++ b/v1.0/src/nt/eprocess_index.yaml
@@ -1,7 +1,7 @@
 # This is the definition file for the index generator.
 
 repository_root: ./
-path: nt
+path: nt/
 type: struct
 implementation: EProcessIndex
 members:
